--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="png" href="/odin-icon.png" />
+    <link rel="icon" type="svg" href="/odin-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin CV Generator</title>
   </head>
